--- a/portfolio.html
+++ b/portfolio.html
@@ -30,6 +30,40 @@
             color: #b3e5fc;
             margin: 0;
         }
+        nav {
+            background: #22313a;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 0;
+            margin: 0;
+            box-shadow: 0 2px 8px rgba(44,83,100,0.07);
+        }
+        nav ul {
+            list-style: none;
+            display: flex;
+            gap: 32px;
+            margin: 0;
+            padding: 0;
+        }
+        nav li {
+            margin: 0;
+        }
+        nav a {
+            display: block;
+            padding: 16px 0;
+            color: #fff;
+            font-family: 'Montserrat', Arial, sans-serif;
+            font-size: 1.08rem;
+            text-decoration: none;
+            letter-spacing: 1px;
+            transition: color 0.2s, border-bottom 0.2s;
+            border-bottom: 2px solid transparent;
+        }
+        nav a:hover, nav a:focus {
+            color: #b3e5fc;
+            border-bottom: 2px solid #b3e5fc;
+        }
         section {
             background: #fff;
             margin: 24px auto;
@@ -132,12 +166,22 @@
         <h1>Yuvanshankar</h1>
         <p>Web Developer & Designer</p>
     </header>
+    <nav>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 
     <section id="about">
         <h2>About Me</h2>
         <p>
             Hi! I'm Yuvanshankar, a passionate web developer with experience in building modern, responsive websites and web applications.
             I love turning ideas into reality using code.
+        </p>
+        <p>
+            I am currently studying at Kongu Engineering College, pursuing a BE in Computer Science and Design.
         </p>
         <p>
             I specialize in front-end and back-end development, with a strong foundation in HTML, CSS, JavaScript, and database management. My projects reflect my commitment to clean code, user-centric design, and innovative solutions.
